# LAPACKE_dgesv

./: CMakeLists.txt  README.md  compile  solve.c
